--- a/target.html
+++ b/target.html
@@ -9,6 +9,13 @@
 
 	<style>
 
+		nav ul {
+			border: 0;
+			border-radius: 5px;
+			background-color: rgb(220, 220, 220);
+			padding: 5px;
+		}
+
 		section {
 			margin: 1rem;
 		}
@@ -22,12 +29,17 @@
 		}
 
 		:target {
-			background-color: yellow;
+			border-left: 4px solid rgb(200, 200, 200);
+			padding-left: 1rem;
 		}
 
 	</style>
 </head>
 <body>
+
+<div class="container">
+	
+
 
 <nav>
 	<ul>
@@ -61,7 +73,7 @@
 	</section>
 
 
-	
+</div>
 
 </body>
 </html>
