used not selector with lang

--- a/lang.html
+++ b/lang.html
@@ -55,7 +55,7 @@
 			quotes: '「' '」';
 		}
 
-		em { font-style: italic; }
+		em:not(lang(ja)) { font-style: italic; }
 
 		em:lang(ja) { 
 			font-style: normal; 
