used different example for not

--- a/not.html
+++ b/not.html
@@ -9,13 +9,12 @@
 
 	<style>
 		
-		li {
-			padding: 1rem 0 2rem;
-			margin: 2rem 0;
-		}
 
-		li:not(:last-child) {
-			border-bottom: 2px dotted grey;
+		a:not(.no-underline) {
+			text-decoration: underline;
+		}
+		a.no-underline {
+			text-decoration: none;
 		}
 
 
@@ -27,18 +26,10 @@
 <div class="container">
 	
 
-	<ul>
-		<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque primos congressus copulationesque et consuetudinum instituendarum voluntates fieri propter voluptatem; Quae similitudo in genere etiam humano apparet. Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur. At certe gravius. Et harum quidem rerum facilis est et expedita distinctio. Quae sequuntur igitur?</li>
+	<a href="">Normal link</a>
 
-		<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque primos congressus copulationesque et consuetudinum instituendarum voluntates fieri propter voluptatem; Quae similitudo in genere etiam humano apparet. Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur. At certe gravius. Et harum quidem rerum facilis est et expedita distinctio. Quae sequuntur igitur?</li>
+	<a href="" class="no-underline">Link without underline</a>
 
-		<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque primos congressus copulationesque et consuetudinum instituendarum voluntates fieri propter voluptatem; Quae similitudo in genere etiam humano apparet. Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur. At certe gravius. Et harum quidem rerum facilis est et expedita distinctio. Quae sequuntur igitur?</li>
-
-		<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque primos congressus copulationesque et consuetudinum instituendarum voluntates fieri propter voluptatem; Quae similitudo in genere etiam humano apparet. Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur. At certe gravius. Et harum quidem rerum facilis est et expedita distinctio. Quae sequuntur igitur?</li>
-
-		<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque primos congressus copulationesque et consuetudinum instituendarum voluntates fieri propter voluptatem; Quae similitudo in genere etiam humano apparet. Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur. At certe gravius. Et harum quidem rerum facilis est et expedita distinctio. Quae sequuntur igitur?</li>
- 
-	</ul>
 
 
 </body>
